Update example site

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <p>Ported from <a href="http://www.stanford.edu/class/cs106b/">Stanford CS106B</a> Assignment "Boggle".</p>
 
-<p>Check out the <a href="http://tiny.cc/cs106b-boggle">Example Site</a>.</p>
+<p>Check out the <a href="http://zhuogu.github.io/js-boggle/app">Example Site</a>.</p>
 
 <p><em>Warning: The game won't work on IE7 or below!</em></p>
         </section>
