--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 		</div>
 		<div id="gameCube" board="standard">
 			<div id="cover">
-				<div class="intro">Welcome to play the JavaScript version of CS 106B Boggle game. Hope you have a good time here :) -Zhuogu (Zac) Yu</div>
+				<div class="intro">Welcome to play the JavaScript version of CS 106B Boggle game. Hope you have a good time here :) - Zac Yu</div>
 				<div class="waiting">Please wait while I'm loading all the English words...</div>
 				<div id="standardStardButton" class="startButton">Start a 4x4 Game!</div>
 				<div id="bigStardButton" class="startButton">Start a 5x5 Game!</div>
